--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
-<app-cocktails-container></app-cocktails-container>
-<app-modal class="modal"></app-modal>
+<router-outlet></router-outlet>
+<!-- <app-cocktails-container></app-cocktails-container>
+<app-modal class="modal"></app-modal> -->
