--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <nav class="d-flex flex-row flex-justify-content-between d1">
   <a href="#" class="logo p10">Cocktails</a>
   <ul class="d-flex flex-align-items-center">
-    <li class="p10">
-      <a href="">Recette</a>
+    <li class="p10" routerLink="/cocktails" routerLinkActive="active">
+      Recette
     </li>
-    <li class="p10">
-      <a href="">Ingredients</a>
+    <li class="p10" routerLink="/panier" routerLinkActive="active">
+      Ingredients
     </li>
   </ul>
 </nav>
