--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,8 +7,10 @@ nav {
   }
 
   li {
+    margin-left: 1rem;
     &:hover {
       background-color: var(--secondary);
+      cursor: pointer;
     }
   }
 }
