--- a/src/app/cocktails-container/cocktail-list/cocktail-list.component.html
+++ b/src/app/cocktails-container/cocktail-list/cocktail-list.component.html
@@ -2,11 +2,9 @@
 <ul class="mb-20 list-primary">
   <li
     *ngFor="let cocktail of cocktails; let index = index"
-    (click)="selectCocktailHandler($event, cocktail)"
-    [ngClass]="{
-      cocktailSelected: index == 0
-    }"
+    (click)="selectCocktailHandler($event, index)"
     #childrenNode
+    [appSelected]="cocktail.name == cocktailSelected.name"
   >
     {{ cocktail.name }}
   </li>
