--- a/src/app/cocktails-container/cocktail-details/cocktail-details.component.html
+++ b/src/app/cocktails-container/cocktail-details/cocktail-details.component.html
@@ -10,6 +10,8 @@
   </ul>
   <div class="btnContainer mt10">
     <button class="btn btn-primary">Editer le cocktail</button>
-    <button class="btn btn-primary">Ajouter au panier</button>
+    <button class="btn btn-primary" (click)="addIngredient()">
+      Ajouter au panier
+    </button>
   </div>
 </div>
