--- a/src/app/cocktails-container/cocktail-details/cocktail-details.component.html
+++ b/src/app/cocktails-container/cocktail-details/cocktail-details.component.html
@@ -9,7 +9,9 @@
     </li>
   </ul>
   <div class="btnContainer mt10">
-    <button class="btn btn-primary">Editer le cocktail</button>
+    <button routerLink="edit" class="btn btn-primary">
+      Editer le cocktail
+    </button>
     <button class="btn btn-primary" (click)="addIngredient()">
       Ajouter au panier
     </button>
