--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="d-flex flex-row flex-justify-content-between d1">
-  <a href="#" class="logo p10">Cocktails</a>
+  <a routerLink="cocktails" class="logo p10">Cocktails</a>
   <ul class="d-flex flex-align-items-center">
     <li class="p10" routerLink="/cocktails" routerLinkActive="active">
       Recette
