--- a/src/app/cocktails-container/cocktail-list/cocktail-list.component.html
+++ b/src/app/cocktails-container/cocktail-list/cocktail-list.component.html
@@ -5,8 +5,9 @@
     (click)="selectCocktailHandler($event, index)"
     #childrenNode
     [appSelected]="cocktail.name == cocktailSelected.name"
+    [routerLink]="index.toString()"
   >
     {{ cocktail.name }}
   </li>
 </ul>
-<button class="btn btn-primary">Ajouter un Cocktail</button>
+<button routerLink="new" class="btn btn-primary">Ajouter un Cocktail</button>
